# rlm-claude-code

./: .gitignore  CLAUDE.md  README.md  install.sh  pyproject.toml  rlm-claude-code-spec.md  uninstall.sh
.claude-plugin/: marketplace.json  plugin.json
.claude/commands/: bench.md  code-review.md  rlm.md  test.md
agents/: rlm-orchestrator.md
commands/: rlm-orchestrator.md  rlm.md
docs/: RECOMMENDATIONS.md  getting-started.md
docs/process/: README.md  architecture.md  code-review.md  debugging.md  implementation.md  testing.md
docs/spec/: 00-overview.md  06-smarter-rlm.md  07-intelligence.md  08-performance.md  09-capabilities.md  10-reliability.md  11-user-experience.md  12-architecture.md  13-rich-output.md  14-always-on-rlm.md  15-lean-repl.md
hooks/: hooks.json
scripts/: check_complexity.py  init_rlm.py  setup_repl_env.sh
src/: __init__.py  api_client.py  auto_activation.py  complexity_classifier.py  config.py  context_compression.py  context_index.py  context_manager.py  cost_tracker.py  enhanced_budget.py  gliner_extractor.py  intelligent_orchestrator.py  local_orchestrator.py  memory_evolution.py  memory_store.py  orchestration_logger.py  orchestration_schema.py  orchestrator.py  progress.py  reasoning_traces.py  recursive_handler.py  repl_environment.py  router_integration.py  setfit_classifier.py  smart_pipeline.py  smart_router.py  strategy_cache.py  tokenization.py  tool_bridge.py  trajectory.py  tree_of_thoughts.py  types.py  user_preferences.py
src/epistemic/: __init__.py  consistency_checker.py  evidence_auditor.py  types.py  verification_feedback.py
src/orchestrator/: __init__.py  checkpointing.py  steering.py
tests/: conftest.py
tests/integration/: test_epistemic_verification.py  test_hook_scripts.py
tests/property/: test_context_index_properties.py  test_cost_properties.py  test_progress_properties.py  test_repl_advanced_properties.py  test_tokenization_properties.py
tests/security/: test_repl_security.py
tests/unit/: test_auto_activation.py  test_complexity_classifier.py  test_config.py  test_consistency_checker.py  test_context_compression.py  test_context_index.py  test_context_manager.py  test_cost_tracker.py  test_epistemic_types.py  test_evidence_auditor.py  test_gliner_extractor.py  test_interactive_steering.py  test_lazy_context.py  test_local_orchestrator.py  test_memory_store.py  test_multi_turn_checkpointing.py  test_orchestration_logger.py  test_orchestration_schema.py  test_progress.py  test_reasoning_traces.py  test_recursive_handler.py  test_repl_environment.py  test_setfit_classifier.py  test_smart_pipeline.py  test_smart_router.py  test_tokenization.py  test_trajectory.py  test_tree_of_thoughts.py  test_types.py  test_verification_feedback.py
