[project]
name = "rlm-claude-code"
version = "0.3.4"
description = "Recursive Language Model integration for Claude Code"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "hypothesis>=6.0",
    "cpmpy>=0.9.20",
    "restrictedpython>=7.0",
    "anthropic>=0.40.0",
    "python-dotenv>=1.2.1",
    "openai>=2.15.0",
    "tiktoken>=0.5.0",  # Accurate token counting for cost estimation
    "rich>=13.0.0",  # Terminal formatting (SPEC-13)
    "numpy>=1.26.0",  # Numerical computing
    "pandas>=2.0.0",  # Data manipulation and analysis
    "polars>=1.0.0",  # Fast DataFrame library
    "seaborn>=0.13.0",  # Statistical data visualization
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "pytest-benchmark>=4.0",
    "pytest-watch>=4.2",
    "syrupy>=4.0",  # Snapshot testing
    "ruff>=0.8",
]
local = [
    "setfit>=1.0.0",  # Fast few-shot text classification (~5ms inference)
    "sentence-transformers>=2.0.0",  # SetFit dependency
    "gliner>=0.2.0",  # Entity/signal extraction for complexity detection
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function call in default argument
    "SIM105", # contextlib.suppress - try-except-pass often clearer with comments
    "SIM108", # ternary operators - if-else blocks often more readable
    "SIM110", # any() instead of for loop - explicit loops clearer for complex conditions
    "SIM102", # nested if - sometimes intentional for clarity
    "UP046",  # Generic[T] vs type params - Generic[T] more explicit
    "ARG002", # unused method arguments - often for API compatibility
    "B007",   # unused loop variable - sometimes intentional
    "B905",   # zip without strict - strict not always needed
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
markers = [
    "hypothesis: property-based tests",
    "slow: tests that take >1s",
    "security: security-related tests",
]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src"]
branch = true
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@abstractmethod",
]
fail_under = 80

[tool.ty.environment]
python-version = "3.12"

[tool.ty.src]
# Treat src as a first-party source root
include = ["src"]

[tool.ty.rules]
# Disable unresolved-import for now - ty has issues with relative imports in src layout
unresolved-import = "ignore"
invalid-type-form = "error"
